working on landing page and design

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: UpSet – Visualizing Intersecting Sets
-email: vdl-faculty@sci.utah.edu
+email: alex@sci.utah.edu
 description: "Visualizing Set Visualizations with UpSet"
 baseurl: ""
 url: "https://upset.app"
